welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: Int does not take parameters
      setPos(rangBiscuit() + 1, getY());
                        ^